--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -200,3 +200,63 @@ input[type=submit]:active {
 .error {
   color: red;
 }
+*{
+  
+  font-family:Helvetica;
+  margin:0;
+  padding:0;  
+}
+
+
+.button{  
+  float:left;
+  width:200px;
+  padding:8px 16px;
+  margin:10px;
+  text-align:center;
+  font-weight:bold;
+  cursor:pointer;
+  transition:background .5s;
+}
+
+#guardar{
+  background:#f47931d1;
+  color:#f0f0f0;  
+}
+
+#failure{
+  background:#ff3939;
+  color:#f0f0f0;  
+}
+
+.notify{  
+  position:absolute;
+  top:0px;
+  width:100%;
+  height:0;  
+  box-sizing:border-box;
+  color:white;  
+  text-align:center;
+  background:rgba(0,0,0,.6);
+  overflow:hidden;
+  box-sizing:border-box;
+  transition:height .2s;
+}
+
+#notifyType:before{
+  display:block;
+  margin-top:15px; 
+  
+}
+
+.active{  
+  height:50px;
+}
+
+.guardar:before{
+  Content:"Aww Yeaaaaa! Success!";
+}
+
+.failure:before{
+  Content:"Oh no! Something didn't go as planned :(";
+}
