--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -305,7 +305,7 @@ button {
     height: 50px;
     font-size: 18px;
     color: #ffffff;
-    background-color: #c6610f;
+    background-color: #08a2df;
     border-radius: 30px;
     margin-left: 0;
     margin-top: 30px;
@@ -428,7 +428,7 @@ button {
     height: 50px;
     font-size: 18px;
     color: #ffffff;
-    background-color: #c6610f;
+    background-color: #08a2df;
     border-radius: 30px;
     margin-top: 30px;
     text-align: center;
