--- a/recuperacion/css/main.css
+++ b/recuperacion/css/main.css
@@ -58,7 +58,7 @@ a:focus {
 
 a:hover {
 	text-decoration: none;
-  color: #57b846;
+  color: #0f88dd;
 }
 
 /*---------------------------------------------*/
@@ -256,7 +256,7 @@ iframe {
   width: 100%;
   height: 100%;
   box-shadow: 0px 0px 0px 0px;
-  color: rgba(87,184,70, 0.8);
+  color: #0f88dd;
 }
 
 .input100:focus + .focus-input100 {
@@ -304,7 +304,7 @@ iframe {
 }
 
 .input100:focus + .focus-input100 + .symbol-input100 {
-  color: #57b846;
+  color: #0f88dd;
   padding-left: 28px;
 }
 
@@ -326,13 +326,13 @@ iframe {
   font-family: Montserrat-Bold;
   font-size: 15px;
   line-height: 1.5;
-  color: #fff;
+  color: rgb(233, 230, 237);
   text-transform: uppercase;
 
   width: 100%;
   height: 50px;
   border-radius: 25px;
-  background: #57b846;
+  background: #0f88dd;
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
@@ -349,8 +349,9 @@ iframe {
 }
 
 .login100-form-btn:hover {
-  background: #333333;
+  background: #0c42a7;
 }
+
 
 
 
